--- a/VRChat/43/975143.html
+++ b/VRChat/43/975143.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uuqJdZsZKqbMn9CCY0EFjYobe1utag0xtocEc4fcgrU="></script>
+    "86Y8R7Rflsqex9ZLc3fR+f87/ce+oGQRDT6OQMqVpuY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dソビエトロシア試作銃シリーズvol.1「TKB-059」","description":"\n\n□ソビエト連邦時代の試作三連銃身火器、TKB-059の3Dモデルです。\n5344△ポリゴン。\n\n\n□内容\n・tkb-059.fbx　本体\n\n・readme.txt \n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータを各種ソフトにインポートしてご利用下さい。\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n□TKB-059\n\n設計者：コロボフ\n弾薬：7.62×39mm弾(30×3連弾倉？)\n全長：約690mm\n重量：4.5kg\n設計時期：～1966\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/975143","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/975143/c25fc7db-574d-464b-84a3-fb9242cc7372_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uuqJdZsZKqbMn9CCY0EFjYobe1utag0xtocEc4fcgrU="></script>
+    nonce="86Y8R7Rflsqex9ZLc3fR+f87/ce+oGQRDT6OQMqVpuY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
