--- a/VRChat/84/974284.html
+++ b/VRChat/84/974284.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GwqdpSr+ogVIcLEryEfpK83jWzKBP1beG/UXOSDVRUI="></script>
+    "zkeXSuEYgH3dio5B+6U7Mb7jfN4nEZtGjglx8QIZI/U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat推奨】手裏剣2枚セット","description":"手裏剣です\nなんの変哲もないものと6刃のものがあります。\n黒っぽいガンメタと普通の金属があります。substance　painter製です。\n6刃396ポリゴン　普通144ポリゴンです\n\n内容物\nfbxファイル２つ\nテクスチャ、メタリック　ノーマルマップ計三枚×２種×２種\n計１２枚\n【利用規約】\n\n当モデルの利用者はモデルデータの利用をもって本利用規約に同意したものとみなします。 \n\n本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n本モデルはＶＲchatでの使用を想定したものです。\n \n著作権に基づく表記 \n\n本モデルのデータそのものの転載・再配布、販売は禁止です。\n \n本モデルを利用して制作された作品（3Dモデル・動画・画像・ゲーム等）で対価を得るなどの、営利目的での使用は可能です。 \n\n本モデルでのR18、R18G用途での利用は可能です。 \n\n本モデルを改変や、本モデル由来のパーツを別モデルに流用などは一切自由ですが、改変、流用後のデータの転載や再配布、販売は禁止とします。\n \nサポートについて\n \n頒布データの内容に致命的な欠陥があると当方が認めた場合、頒布データの置き換えを行います。\n\n\n\n","url":"https://booth.pm/ja/items/974284","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/974284/1896b280-5645-4214-aba0-dc830b237229_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GwqdpSr+ogVIcLEryEfpK83jWzKBP1beG/UXOSDVRUI="></script>
+    nonce="zkeXSuEYgH3dio5B+6U7Mb7jfN4nEZtGjglx8QIZI/U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -429,9 +429,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
