--- a/VRChat/33/973233.html
+++ b/VRChat/33/973233.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fpU4qoCmPX/We4Exx+Y+IEwzzyyW0JF5Z1hYjIzJgHE="></script>
+    "Mr5O50K8iBxJKwrqvBmwnFjZeYPQ3oZ0GmMOIEMlA2Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うちわ","description":"■モデル概要\nうちわのポリゴンモデルです。\n\n夏の風物詩のアイテムの一つ!!!\n\n4種類のテクスチャーが入っています。\n木の種類も4種類、マスターの画像データも同梱してますので\nお好きな柄の変更もお手軽にできます。\n\nご自由にお使いいただければと思います。\n\n※バージョンアップ内容(2018/09/24-1.1)\nポリゴン数を抑えるために\n持ち手の枝部分が片面ポリゴンモデルと\nポリゴンが増えますが、片面ポリゴンを両面に見せる\n特殊なシェーダー類を使わなくてもいい\n両面ポリゴンのモデルとの2つのモデルを入れました。\n\n■同梱データ\n・FBX\n・画像データ(PSD、PNG)\n\n■データ詳細\n・Itm_Uchiwa_Single-Sided_Poly　【124ポリゴン】\nポリゴン数を抑えるために\n持ち手の枝部分が片面ポリゴンになっています。\n\n両面ポリゴンに見えるシェーダーをお使いください。\n使わない場合は片面から見た場合は透明になります。\n\n・Itm_Uchiwa_Double-Sided_Poly【238ポリゴン】\n持ち手の枝部分が両面ポリゴンになっています。\nその分、ポリゴン数は増加しています。\n\n片面ポリゴンを両面に見えるシェーダーは\n使わなくても大丈夫です。\n\n■利用規約について\n・未改変、未改造、での再配布は禁止。\n\n・営利目的での使用可能。\n\n■免責事項 \n・本データの利用において、何らかのトラブル、\n　損失が生じたとしても当方は一切の責任を負いません。\n\n・利用規約についての内容は予告なく変更する場合があります。\n\n\n■バージョン履歴\n2018/09/24-1.1\n2018/08/18-1.0","url":"https://booth.pm/ja/items/973233","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ddadc202-dbe9-4f85-83b4-97cd420b1442/i/973233/65ea0cde-b838-40eb-a535-db4bd0c6f68b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fpU4qoCmPX/We4Exx+Y+IEwzzyyW0JF5Z1hYjIzJgHE="></script>
+    nonce="Mr5O50K8iBxJKwrqvBmwnFjZeYPQ3oZ0GmMOIEMlA2Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -477,9 +477,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
