--- a/VRChat/21/973121.html
+++ b/VRChat/21/973121.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IxPola003s9RmIUvE/bIfhpf2CXXPR2j4Y1cXtjzWKs="></script>
+    "5xHUD80t7WTWD0E+ulQ8I73xML6EslAQSd4SSpAhDpA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"巨大剣","description":"VRChatでの使用を想定した3Dモデルです。\nワールドへの設置、使用を想定していますが、原則使用にあたっての制限はございません。\n低ポリゴンですのでアバターへの装備にも適しています。\n\nテクスチャも含め改変も自由ですが、再配布・二次配布・転売等はご遠慮ください。\n\n【情報】\n△210ポリゴン、テクスチャ3枚（アルベド・メタリック・ノーマル）","url":"https://booth.pm/ja/items/973121","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/33f35c4a-fc58-4353-abe5-4faca5e412cb/i/973121/448f77ec-5d81-488e-b04b-efd2f56e3174_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IxPola003s9RmIUvE/bIfhpf2CXXPR2j4Y1cXtjzWKs="></script>
+    nonce="5xHUD80t7WTWD0E+ulQ8I73xML6EslAQSd4SSpAhDpA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
