--- a/VRChat/71/972771.html
+++ b/VRChat/71/972771.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/l7xr1VrkOUGvS3G4FOqjdaDuybgwJeTvNaTnRvkfiU="></script>
+    "nlnR1u9tdJboS//EiNRuKnEU+6qrFwqftXH7fk2udB0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カラーコーン","description":"【説明文】\nVRChatでの利用を目的として生み出された3Dモデル。\nカラーコーンのようなもの。\n\nコーン：△ポリゴン数　778\nカバー：△ポリゴン数　184\n\n【付属品】\nunitypackageデータ\nfbxデータ\ntextureデータ\n\n【利用規約】\nご自由にどうぞ。\n\n【免責事項】\nこのデータを使用して発生したいかなる問題、損害にも当方は責任を持ちません。\nご使用は自己責任でお願いします。\n","url":"https://booth.pm/ja/items/972771","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fceb67cb-cfe3-44f3-9d8b-1d494d77a478/i/972771/fb869416-2578-4db4-a76e-4cc05a8a599f_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/l7xr1VrkOUGvS3G4FOqjdaDuybgwJeTvNaTnRvkfiU="></script>
+    nonce="nlnR1u9tdJboS//EiNRuKnEU+6qrFwqftXH7fk2udB0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -365,9 +365,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
