--- a/VRChat/20/972320.html
+++ b/VRChat/20/972320.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "S304vRY57+bDezssl+IEELTOoULDXsLPpMDjBEeTboI="></script>
+    "575+WLV89tmrblHfrOJb3LsXDSAumyn6dPiU/HEp1u4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"和風髪飾りVer.2【オリジナル3Dモデル】","description":"【説明】\nVRChat用アバターのカスタマイズを想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n制作者:Tokunaga_ac\n\n\n-更新-ver.2\n\nVRChatポリゴン数制限増加に伴い、豪華にしてみました。\n以前のバージョンを購入済みの方は無償アップデータ出来ます。すがすがしいまでのテクスチャ流用。\n\n一応前バージョンのファイルも残してあります。\n\n\n今回からarktoonshaderに変更しました。\nメタリックとリフレクト表現によってかなりリッチな仕上がりになっています。\n\n\n【内容物】\n・HairOrnamentsVer2.unitypackage\n  プレハブ化されたモデルデータ\n\n・contentsフォルダ\nパッケージに含まれるテクスチャ、FBXデータ\n\n\n【利用規約】\n\nhttps://docs.google.com/document/d/1L3RhJVXeK9gEyJG3I2trR6v0SWS8bVYIy4ju1dvHKwY/edit?usp=sharing\n\n\n\n\n\n【連絡先】\n\nTwitter:Tokunaga_ac\nDiscord:Tokunaga_ac#3200\nEmail  :atelieralca01@gmail.com","url":"https://booth.pm/ja/items/972320","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/972320/fdbd048c-d92b-4f98-959e-4bd164eb0385_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="S304vRY57+bDezssl+IEELTOoULDXsLPpMDjBEeTboI="></script>
+    nonce="575+WLV89tmrblHfrOJb3LsXDSAumyn6dPiU/HEp1u4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -398,9 +398,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
