--- a/VRChat/14/972414.html
+++ b/VRChat/14/972414.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5+mAW7xB7qLDFUAXPdGRPnH6XcV2RqZ1zgkicPf/ZQg="></script>
+    "kbjHxezyD7JVGItLjSWpQNakRxU87mGVLzGkWIdsVOE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC用】巫女型アバターver2","description":"VRChat用アバター\n\n■仕様\n巫女型アバター：20419ポリゴン\n表情種類：笑顔、不満顔、驚き顔\n（各表情に通常、悪い顔、ゲス顔の三種があります）\n■内容\n・巫女型アバターfbx\n・各種マテリアル\n・テクスチャ\n・アニメーションファイル\n　表情用アニメーションファイル\n\n■利用について\n・収録されているデータについて権利は配布元が有しております。\n・改変しての利用可です。\n・VRCHATでの利用でクレジット表記などの必要はありません。\n・VRCHAT内での利用、商用配信に映る場合に制限は設けません。\n・コンテンツ作成で商用非商用、全年齢・R18問わず使用可です。\n・許可なく再配布することは禁止です。\n・政治的パフォーマンス、宗教活動、ヘイトスピーチ、他者への嫌がらせ行為、その他公序良俗に反する目的で使用することを禁止します\n・本データを使用したことにより発生した問題、損失について配布元は一切の責任を負いません\n　\n2018/08/26　髪にUTS2.0を使用したものを追加。\n2020/02/14　全体的に進化してver2に更新。","url":"https://booth.pm/ja/items/972414","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/a522d5fb-a055-48a0-9f37-424c1680d335_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5+mAW7xB7qLDFUAXPdGRPnH6XcV2RqZ1zgkicPf/ZQg="></script>
+    nonce="kbjHxezyD7JVGItLjSWpQNakRxU87mGVLzGkWIdsVOE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -400,9 +400,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
