--- a/VRChat/27/972427.html
+++ b/VRChat/27/972427.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WXvg+nSY4XDYYvawmxX/K/wqLYQnVh5UWL7lf/dc5ZY="></script>
+    "HniJJz5Tgj2FaDMzjul2o1tsN698NxdK1y0Cb4MgIf0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『ニーナ/VT-217』","description":"VRC向けのオリジナルアバターです。\nぬこみや様(@nukomiya09)の素体を利用させて頂いてます。\nhttps://booth.pm/ja/items/963251\n\nDynamicBoneとユニティちゃんトゥーンシェーダー2.0に対応しています。\n\n※予めUnityプロジェクトにユニティちゃんトゥーンシェーダー2.0とVRCSDK、及びDynamicBone、ParticleSystem(任意)をインポートした状態でunitypackageをインポートしてください。\n\nユニティちゃんトゥーンシェーダー2.0\n→http://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\nポリゴン数(三角面)：14206\nマテリアル数：7\n\n【注意】\n関節の都合上しゃがむと関節が破綻します。\n\n\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・自作発言等、作者を偽る発言はおやめください。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用","url":"https://booth.pm/ja/items/972427","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/22623f29-cbf4-42f5-96e7-40d523e8e6fe/i/972427/ee8c0159-986d-4015-a521-37b28ce37792_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WXvg+nSY4XDYYvawmxX/K/wqLYQnVh5UWL7lf/dc5ZY="></script>
+    nonce="HniJJz5Tgj2FaDMzjul2o1tsN698NxdK1y0Cb4MgIf0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -347,9 +347,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
